[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["esipy"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "*/venv/*",
    "*/.venv/*",
    "*/build/*",
    "*/dist/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["test", "tests", "build", "dist"]
skips = ["B101"]  # Skip assert_used test

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "invalid-name",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "duplicate-code"
]

[tool.pylint.format]
max-line-length = 127

[tool.pylint.design]
max-args = 10
max-locals = 20
max-branches = 15
max-statements = 60

[project]
name = "EsiPy"
dynamic = ["version"]
description = "Swagger Client for the ESI API for EVE Online"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "BSD 3-Clause License"}
authors = [
    {name = "Kyria", email = "anakhon@gmail.com"},
]
dependencies = [
    "requests",
    "openapi-core >= 0.19.0",
    "pytz",
    "python-jose >= 3.0 , < 4",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/Kyria/EsiPy"

[tool.hatch.build.targets.wheel]
packages = ["esipy"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "esipy/_version.py"

[dependency-groups]
dev = [
    "openapi-core==0.19.0",
    "python-jose<4",
    "pytz",
    "requests",
    "coverage",
    "coveralls",
    "httmock",
    "nose",
    "python-memcached",
    "redis",
    "diskcache",
]
